--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">CV Keren</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">CV KEREN</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -312,13 +312,16 @@
       <div class="copyright">
         &copy; Copyright <strong><span>CV Keren</span></strong>. All Rights Reserved
       </div>
+      <!--
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
+        <!--
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
+       -->
     </div>
   </footer><!-- End  Footer -->
 
