--- a/services.html
+++ b/services.html
@@ -170,7 +170,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Kelly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>CV Keren</span></strong>. All Rights Reserved
       </div>
       <!--
       <div class="credits">
