--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0840973765835!2d107.13598187499055!3d-6.252649793735829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69857f541c575b%3A0x2406cd1b70321af6!2sCV%20KEREN!5e0!3m2!1sen!2sid!4v1717339235723!5m2!1sen!2sid" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
