--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>KAV. Kalijaya, PERMAI, Kabupaten Bekasi, Jawa Barat 17530</p>
               </div>
 
               <div class="email">
