--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
   </footer><!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="https://wa.me/6285972702006"><i class="bi bi-whatsapp"></i></a>
+  <a href="https://wa.me/6285972702006" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
