--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <div id="preloader"></div>
-  <a href="https://wa.me/6285972702006?text=Halo%20saya%20ingin%20buat%20CV%20Online" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
-
+  <div id="preloader">
+     <a href="https://wa.me/6285972702006?text=Halo%20saya%20ingin%20buat%20CV%20Online" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-whatsapp"></i></a>
+  </div>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
