--- a/contact.html
+++ b/contact.html
@@ -76,8 +76,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          <p>Jika kalian ingin membuat CV Online di CV Keren, Hubungi Alamat dan Kontak Kami di bawah ini :</div>
 
         <div>
           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.0840973765835!2d107.13598187499055!3d-6.252649793735829!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69857f541c575b%3A0x2406cd1b70321af6!2sCV%20KEREN!5e0!3m2!1sen!2sid!4v1717339235723!5m2!1sen!2sid" frameborder="0" allowfullscreen></iframe>
