--- a/services.html
+++ b/services.html
@@ -89,8 +89,8 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">CV Online</a></h4>
+              <p>Cvmu akan online melalui internet</p>
             </div>
           </div>
 
