--- a/services.html
+++ b/services.html
@@ -102,8 +102,8 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">CV Lebih Modern</a></h4>
+              <p>Dengan cv online tampilanmu lebih modern</p>
             </div>
           </div>
 
@@ -115,8 +115,8 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Diakses Kapan Saja</a></h4>
+              <p>Dengan online bisa di akses dimana saja dan kapan saja</p>
             </div>
           </div>
 
