--- a/services.html
+++ b/services.html
@@ -128,8 +128,8 @@
                 </svg>
                 <i class="bx bx-money"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Harga Terjangkau</a></h4>
+              <p>Harga cv online sangat bersahabat</p>
             </div>
           </div>
 
