--- a/services.html
+++ b/services.html
@@ -141,8 +141,8 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">B</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Tampilan Keren</a></h4>
+              <p>Buat di cv keren tampilan cvmu akan keren dan kekinian</p>
             </div>
           </div>
 
