--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
                 </svg>
                 <i class="bx bx-comment"></i>
               </div>
-              <h4><a href="">Free Konnsultasi</a></h4>
+              <h4><a href="">Free Konsultasi</a></h4>
               <p>Buat di cv online free konsultasi tentang cv</p>
             </div>
           </div>
