--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">CV Online</a></h4>
-              <p>Cvmu akan online melalui internet</p>
+              <p>Buat di CV Keren Cvmu akan menjadi online melalui internet</p>
             </div>
           </div>
 
@@ -103,7 +103,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">CV Lebih Modern</a></h4>
-              <p>Dengan cv online tampilanmu lebih modern</p>
+              <p>Buat di CV Keren cv online tampilanmu akan lebih modern untuk di lihat</p>
             </div>
           </div>
 
@@ -129,7 +129,7 @@
                 <i class="bx bx-money"></i>
               </div>
               <h4><a href="">Harga Terjangkau</a></h4>
-              <p>Harga cv online sangat bersahabat</p>
+              <p>Buat di Cv Keren Harganya sangat bersahabat dan murah meriah</p>
             </div>
           </div>
 
