--- a/services.html
+++ b/services.html
@@ -155,7 +155,7 @@
                 <i class="bx bx-comment"></i>
               </div>
               <h4><a href="">Free Konsultasi</a></h4>
-              <p>Buat di cv keren free konsultasi tentang cv</p>
+              <p>Buat di cv keren akan mendapatkan free konsultasi tentang cvmu</p>
             </div>
           </div>
 
