--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a class="active" href="index.html">Beranda</a></li>
+          <li><a href="about.html">Tentang</a></li>
           <!--<li><a href="resume.html">Resume</a></li>-->
-          <li><a href="services.html">Services</a></li>
+          <li><a href="services.html">Layanan</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Kontak</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -73,9 +73,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <h1>CV Keren</h1>
-      <h2>We are a professional created cv online from Bekasi</h2>
-      <a href="about.html" class="btn-about">About CV Keren</a>
+      <h2>Buat CV kamu lebih KEREN agar lebih menarik.</h2>
+      <a href="about.html" class="btn-about">Tentang CV Keren</a>
     </div>
   </section><!-- End Hero -->
 
